--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -353,64 +353,79 @@
 
       <section class="section-slider">
         <div class="section-slider__wrapper">
-          <h2 class="section-slider__title">Отзывы наших выпускников</h2>
+          <h2 class="section-slider__title typographic-meb">Отзывы наших выпускников</h2>
           <ul class="slider section-slider__items">
-            <li class="slider__item">
+            <li class="slider__item slider__item--first-card">
               <div class="slider__link-wrapper">
-                <a href="" class="slider__link slider__link--img">
-                  <img class="slider__img" src="#" alt="">
+                <a href="#" class="slider__link slider__link--img">
+                  <img class="slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская" width="80" height="80">
                 </a>
-                <a href="" class="slider__link slider__link--icon">
+                <a href="#" class="slider__link slider__link--icon">
                   <svg class="slider__icon">
-                    <use href="./images/icons-svg/symbol-defs.svg#icon-vk"></use>
+                    <use y="-5" x="-10" width="180%" height="170%" href="./images/icons-svg/symbol-defs.svg#icon-vk">
+                    </use>
                   </svg>
                 </a>
               </div>
               <div class="graduate-card slider__graduate-card">
-                <h3 class="graduate-card__title">Text</h3>
-                <p class="graduate-card__description">Text</p>
-                <p class="graduate-card__text">Text</p>
-                <a class="graduate-card__link" href="#">Text</a>
+                <h3 class="graduate-card__title typographic-meb">Тоня Кучеровская</h3>
+                <p class="graduate-card__description typographic-mm">Выпуск 2015-го года, Національний університет
+                  біоресурсів
+                  і природокористування України</p>
+                <p class="graduate-card__text typographic-mm">За короткий час занять з Оленою я опанувала граматику і
+                  поповнила свій
+                  зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці ...
+                  <a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                    дальше</a>
+                </p>
               </div>
             </li>
             <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
-            </li>
-            <li class="slider__item">
-              <a href="" class="slider__link">
-                <img class="slider__image" src="#" alt="">
-              </a>
+              <div class="cards-slides__wrapper">
+                <ul class="cards-slides">
+                  <li class="cards-slides__item slider__item--second-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate2.png" alt="name of the second card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--third-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate3.png" alt="name of the third card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--fourth-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate4.png" alt="name of the fourth card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--fifth-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate5.png" alt="name of the fifth card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--sixth-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate6.png" alt="name of the sixth card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--seventh-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate7.png" alt="name of the seventh card" width="54" height="54">
+                    </a>
+                  </li>
+                  <li class="cards-slides__item slider__item--eighth-card">
+                    <a href="#" class="cards-slides__link">
+                      <img class="cards-slides__image" src="./images/graduate8.png" alt="name of the eighth card" width="54" height="54">
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
-          <button class="section-slider__button  section-slider__button--left-arrow">&larr;</button>
-          <button class="section-slider__button section-slider__button--right-arrow">&rarr;</button>
+          <button class="section-slider__button  section-slider__button--left-arrow" type="button"><svg class="icon menu-actions__icon">
+            <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-communication"></use>
+          </svg></button>
+          <button class="section-slider__button section-slider__button--right-arrow" type="button"></button>
         </div>
       </section>
 
