--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -383,43 +383,43 @@
             <li class="slider__item">
               <div class="cards-slides__wrapper">
                 <ul class="cards-slides">
-                  <li class="cards-slides__item slider__item--second-card">
+                  <li class="cards-slides__item cards-slides__item--second-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate2.png" alt="name of the second card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--third-card">
+                  <li class="cards-slides__item cards-slides__item--third-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate3.png" alt="name of the third card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--fourth-card">
+                  <li class="cards-slides__item cards-slides__item--fourth-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate4.png" alt="name of the fourth card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--fifth-card">
+                  <li class="cards-slides__item cards-slides__item--fifth-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate5.png" alt="name of the fifth card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--sixth-card">
+                  <li class="cards-slides__item cards-slides__item--sixth-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate6.png" alt="name of the sixth card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--seventh-card">
+                  <li class="cards-slides__item cards-slides__item--seventh-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate7.png" alt="name of the seventh card"
                         width="54" height="54">
                     </a>
                   </li>
-                  <li class="cards-slides__item slider__item--eighth-card">
+                  <li class="cards-slides__item cards-slides__item--eighth-card">
                     <a href="#" class="cards-slides__link">
                       <img class="cards-slides__image" src="./images/graduate8.png" alt="name of the eighth card"
                         width="54" height="54">
@@ -471,12 +471,12 @@
   <footer class="footer">
     <div class="footer__wrapper container">
       <ul class="footer__menu">
-        <li class="footer__item">
+        <li class="footer__item footer__item--logo">
           <a href="#" class="footer__logo logo">
             <img class="footer__img" src="./images/logo2x.png" alt="brand and company name" width="78" height="30">
           </a>
         </li>
-        <li class="footer__item">
+        <li class="footer__item footer__item--form">
           <form class="footer-form footer__form" action="#" method="GET">
             <label for="phoneNummber">
               <svg class="icon footer-form__icon" width="20px" height="20px">
@@ -488,10 +488,10 @@
               placeholder="+38 (000) 000 00 00" required autocomplete="tel-national">
           </form>
         </li>
-        <li class="footer__item">
+        <li class="footer__item footer__item--form">
           <a href="#" class="footer__link link">
             <svg class="icon footer__icon">
-              <use y="-5" x="-10" width="180%" height="170%" href="./images/sprite/symbol-defs.svg#icon-instagram">
+              <use  width="100%" height="120%" href="./images/icons-svg/symbol-defs.svg#icon-instagram">
               </use>
             </svg>
           </a>
