--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -478,20 +478,22 @@
         </li>
         <li class="footer__item footer__item--form">
           <form class="footer-form footer__form" action="#" method="GET">
-            <label for="phoneNummber">
+            <label class="footer-form__label" for="phoneNummber">
               <svg class="icon footer-form__icon" width="20px" height="20px">
-                <use y="-5" x="-10" width="180%" height="170%" href="./images/icons-svg/symbol-defs.svg#icon-call">
+                <use y="0" x="-3" width="125%" height="125%" href="./images/icons-svg/symbol-defs.svg#icon-call">
                 </use>
               </svg>
+
+              <input class="footer-form__input typographic-msb" type="tel" name="phone" id="phoneNummber"
+                placeholder="+38 (000) 000 00 00" required autocomplete="tel-national">
             </label>
-            <input class="footer-form__input" type="tel" name="phone" id="phoneNummber"
-              placeholder="+38 (000) 000 00 00" required autocomplete="tel-national">
           </form>
         </li>
         <li class="footer__item footer__item--form">
           <a href="#" class="footer__link link">
-            <svg class="icon footer__icon">
-              <use  width="100%" height="120%" href="./images/icons-svg/symbol-defs.svg#icon-instagram">
+            <!-- <img class="footer__img" src="./images/instagram.png" alt="brand and company name" width="37" height="37"> -->
+            <svg class="icon footer__icon" width="37px" height="37px">
+              <use y="0" x="0" width="100%" height="100%" href="./images/icons-svg/sprite.svg#icon-instagram">
               </use>
             </svg>
           </a>
