--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -52,7 +52,7 @@
               бесплатное занятие</button>
           </div>
           <div class="section-training__img">
-            <img class="img" src="./images/train-01.png" alt="" srcset="">
+            <img class="img" src="./images/train-01.png" alt="Комплексная подготовка к ВНО по английскому языку">
           </div>
         </div>
       </section>
@@ -61,15 +61,32 @@
         <div class="section-icons__wrapper">
           <ul class="menu-icons">
             <li class="item menu-icons__item">
-              <a href="#" class="link menu-icons__link menu-icons__link--female"></a>
+              <a href="#" class="link menu-icons__link menu-icons__link--female">
+                <svg class="icon menu-icons__icon" width="36px" height="36px">
+                  <use y="-1" x="-6" width="135%" height="130%" href="./images/icons-svg/symbol-defs.svg#icon-female">
+                  </use>
+                </svg>
+              </a>
               <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
             </li>
             <li class="item menu-icons__item">
-              <a href="#" class="link menu-icons__link menu-icons__link--mobile"></a>
+              <a href="#" class="link menu-icons__link menu-icons__link--mobile">
+                <svg class="icon menu-icons__icon" width="36px" height="36px">
+                  <use y="-1" x="-6" width="135%" height="130%"
+                    href="./images/icons-svg/symbol-defs.svg#icon-mobile-learning">
+                  </use>
+                </svg>
+              </a>
               <p class="menu-icons__description">Современные методики обучения</p>
             </li>
             <li class="item menu-icons__item">
-              <a href="#" class="link menu-icons__link menu-icons__link--insurance"></a>
+              <a href="#" class="link menu-icons__link menu-icons__link--insurance">
+                <svg class="icon menu-icons__icon" width="36px" height="36px">
+                  <use y="-1" x="-6" width="135%" height="130%"
+                    href="./images/icons-svg/symbol-defs.svg#icon-insurance">
+                  </use>
+                </svg>
+              </a>
               <p class="menu-icons__description">Финансовая гарантия результата</p>
             </li>
           </ul>
@@ -192,8 +209,8 @@
           <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
             <li class="list-program__item">
-              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
               <div class="list-program__wrapper">
+                <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <span class="list-program__segment">Grammar</span>
                 <p class="list-program__text typographic-mr ">
                   Nouns & Articles
@@ -204,8 +221,8 @@
               </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
               <div class="list-program__wrapper">
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <span class="list-program__segment">Grammar</span>
                 <p class="list-program__text typographic-mr ">
                   Pronouns <br /> Active Voice <br /> Passive Voice</p>
@@ -215,8 +232,8 @@
               </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
               <div class="list-program__wrapper">
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <span class="list-program__segment">Grammar</span>
                 <p class="list-program__text typographic-mr ">
                   Modal verbs <br /> Infinitive <br /> Gerund <br /> Participle: 1, 2</p>
@@ -229,8 +246,8 @@
               </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
               <div class="list-program__wrapper">
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <span class="list-program__segment">Grammar</span>
                 <p class="list-program__text typographic-mr ">
                   Clauses: Conditional <br /> and Wishes <br /> Direct / Reported speech <br />
@@ -244,8 +261,8 @@
               </div>
             </li>
             <li class="list-program__item">
-              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
               <div class="list-program__wrapper">
+              <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <span class="list-program__segment">
                   <span class="list-program__hidden-element">Grammar</span></span>
                 <p class="list-program__text typographic-mr ">
@@ -361,8 +378,8 @@
                   <img class="slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская" width="80" height="80">
                 </a>
                 <a href="#" class="slider__link slider__link--icon">
-                  <svg class="slider__icon">
-                    <use y="-5" x="-10" width="180%" height="170%" href="./images/icons-svg/symbol-defs.svg#icon-vk">
+                  <svg class="slider__icon" width="25px" height="14px">
+                    <use y="-5" x="-11" width="186%" height="176%" href="./images/icons-svg/symbol-defs.svg#icon-vk">
                     </use>
                   </svg>
                 </a>
@@ -485,17 +502,14 @@
               </svg>
 
               <input class="footer-form__input typographic-msb" type="tel" name="phone" id="phoneNummber"
-                placeholder="+38 (000) 000 00 00" required autocomplete="tel-national">
+                placeholder="+38 (000) 000 00 00" required autocomplete="tel-national" minlength="13" maxlength="19"
+                pattern="+38 ([0-9]{3}) [0-9]{3} [0-9]{2} [0-9]{2}">
             </label>
           </form>
         </li>
         <li class="footer__item footer__item--form">
-          <a href="#" class="footer__link link">
-            <!-- <img class="footer__img" src="./images/instagram.png" alt="brand and company name" width="37" height="37"> -->
-            <svg class="icon footer__icon" width="37px" height="37px">
-              <use y="0" x="0" width="100%" height="100%" href="./images/icons-svg/sprite.svg#icon-instagram">
-              </use>
-            </svg>
+          <a href="#" class="footer__link">
+            <i class="footer__icon"></i>
           </a>
         </li>
       </ul>
